Add tests for the search users with friend status